refactor : 새로운 행사가 생성될 때, 관심태그가 존재하는 사용자들에게 알림 로직 수정
기존에는 모든 member를 조회하여 필터링

이번엔 이벤트가 가지고 있는 태그 ID를 통해서 해당 태그 ID를 가진 멤버들을 조회하여, 해당 멤버들에게만 알림을 보냄

#256